public interface ICook {
    void bake(String product);
    void stew(String product);
    void fry(String product);
}
