package errors;

public class TryZeroRoomsException extends Exception{
    public TryZeroRoomsException (String s) {
        super(s);
    }
}
