package inerfaces;

import room.Dryer;

public interface IDry {
    public void wet();
    public void dry();
    public void dryOn(Dryer dryer);
}
