package inerfaces;
import shorty.Shorty;

public interface IWalk {
    public void streetWalk(String street, Shorty shorty);
}
