package room;

public class Oven {
    private String material;
    public Oven(String material) {
        this.material = material;
    }

    public String getMaterial() {
        return this.material;
    }
}
